Possibility to proceed to next question with click

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</form>
 
 		<div class="alphabet"></div>
-		<div class="test"></div>
+		<div class="test" onclick="skip()"></div>
 
 		<footer>
 			<div>
