--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="icon" type="image/png" href="favicon.png">
 		<meta name="description" content="Learn Armenian alphabet by frequency, Учить армянский алфавит по частотности">
 		<meta name="keywords" content="armenian, letters, alphabet, learn, test, frequency, trainer, армянский, алфавит, буквы, учить, тренер, частотность">
+		<meta property="og:image" content="https://chev.me/armenian/armenian.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=0.6">
 		<!-- Yandex.Metrika counter --> 
 		<script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(37286925, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/37286925" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
