Add some OG tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link rel="icon" type="image/png" href="favicon.png">
 		<meta name="description" content="Learn Armenian alphabet by frequency, Учить армянский алфавит по частотности">
 		<meta name="keywords" content="armenian, letters, alphabet, learn, test, frequency, trainer, армянский, алфавит, буквы, учить, тренер, частотность">
+		<meta property="og:url" content="https://chev.me/armenian/"/>
+		<meta property="og:type" content="website"/>
 		<meta property="og:image" content="https://chev.me/armenian/armenian.png"/>
 		<meta name="viewport" content="width=device-width, initial-scale=0.6">
 		<!-- Yandex.Metrika counter --> 
