--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 		<form>
 			<div class="group">
-				<label><input name="upper" oninput="update()" type="checkbox" checked>Upper</label>
-				<label><input name="lower" oninput="update()" type="checkbox" checked>Lower</label>
+				<label><input name="upper" data-type="case" oninput="update(true, event)" type="checkbox" checked>Upper</label>
+				<label><input name="lower" data-type="case" oninput="update(true, event)" type="checkbox" checked>Lower</label>
 			</div>
 			<div class="group">
 				<label><input oninput="updateAlphabet()" name=sort value=freq type=radio checked>By frequency</label>
