Add Russian version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<link rel="stylesheet" href="main.css">
 		<title>Armenian alphabet trainer</title>
@@ -43,9 +43,19 @@
 				<a href="https://github.com/okalachev/armenian">Source code on GitHub</a>
 			</div>
 			<div>
+				<a href="ru">Русская версия</a>
+			</div>
+			<div>
 				Author: <a href="https://chev.me">Oleg Kalachev</a>
 			</div>
 		</footer>
+
+		<template id="i18n-train">Train!</template>
+		<template id="i18n-train-selected">Train selected!</template>
+		<template id="i18n-correct-answers">Correct answers:</template>
+		<template id="i18n-of">of</template>
+		<template id="i18n-choose">Choose correct transliteration:</template>
+
 		<script src="main.js"></script>
 	</body>
 </html>
